# FishRag

./: .dockerignore  .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
apps/api/: Dockerfile
apps/api/fishrag_api/: __init__.py  main.py  middleware.py  observability.py
apps/api/fishrag_api/api/: dependencies.py  router.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  styles.css
docker/grafana/dashboards/: fishrag-api.json
docker/prometheus/: prometheus.yml
docs/: acceptance.md  agent.md  approvals.md  backend_stage1.md  centos7-deployment.md  deployment.md  documents.md  evaluation.md  frontend.md  middleware.md  observability.md  planning.md  retrieval.md  sessions.md  setup.md
migrations/: env.py
migrations/versions/: 20260617_0001_initial_schema.py  20260618_0002_rag_evaluation_jobs.py
tests/: test_acceptance_smoke.py  test_agent_api.py  test_agent_runtime.py  test_app_basics.py  test_approval.py  test_approvals_api.py  test_chunking.py  test_config.py  test_db_models.py  test_document_embeddings.py  test_document_keyword_index.py  test_document_parsing.py  test_document_processing.py  test_document_upload.py  test_e2e_api.py  test_embeddings.py  test_evaluation.py  test_evaluations_api.py  test_generation.py  test_keyword_index.py  test_memories_api.py  test_planning.py  test_planning_api.py  test_rag_api.py  test_rerankers.py  test_retrieval.py  test_security.py  test_sessions_api.py
tools/: acceptance_smoke.py  perf_smoke.py
(+22 files in other folders)
