[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishrag"
version = "0.1.0"
description = "Enterprise-ready medical knowledge base RAG-Agent system."
readme = "readme.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["apps/api", "packages/common", "packages/agent", "packages/rag"]
include = ["fishrag_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api", "packages/common", "packages/agent", "packages/rag"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["apps/api", "packages/common", "packages/agent", "packages/rag"]
warn_unused_ignores = true
warn_return_any = true
